fixed footer spacings

--- a/assets/sass/epv-theme/_configuration.sass
+++ b/assets/sass/epv-theme/_configuration.sass
@@ -50,7 +50,6 @@ $footer-background-color: $color-accent
 $footer-color: $color-background
 $footer-logo-height-desktop: pxToRem(130)
 $footer-logo-height: pxToRem(80)
-$footer-icons-size: pxToRem(40)
 
 // Hero
 $hero-color: $color-background
